@startuml

title __AGGREGATEOPERATOR's Class Diagram__\n

  namespace gr.ds.unipi.noda.api.redis {
    namespace aggregateOperator {
      abstract class gr.ds.unipi.noda.api.redis.aggregateOperator.AggregateOperator {
          + getOperatorExpression()
          # AggregateOperator()
      }
    }
  }
  

  namespace gr.ds.unipi.noda.api.redis {
    namespace aggregateOperator {
      class gr.ds.unipi.noda.api.redis.aggregateOperator.OperatorAvg {
          {static} + newOperatorAvg()
          - OperatorAvg()
      }
    }
  }
  

  namespace gr.ds.unipi.noda.api.redis {
    namespace aggregateOperator {
      class gr.ds.unipi.noda.api.redis.aggregateOperator.OperatorCount {
          {static} + newOperatorCount()
          - OperatorCount()
      }
    }
  }
  

  namespace gr.ds.unipi.noda.api.redis {
    namespace aggregateOperator {
      class gr.ds.unipi.noda.api.redis.aggregateOperator.OperatorCountDistinct {
          {static} + newOperatorCountDistinct()
          - OperatorCountDistinct()
      }
    }
  }
  

  namespace gr.ds.unipi.noda.api.redis {
    namespace aggregateOperator {
      class gr.ds.unipi.noda.api.redis.aggregateOperator.OperatorCountNonNull {
          {static} + newOperatorCountNonNull()
          - OperatorCountNonNull()
      }
    }
  }
  

  namespace gr.ds.unipi.noda.api.redis {
    namespace aggregateOperator {
      class gr.ds.unipi.noda.api.redis.aggregateOperator.OperatorMax {
          {static} + newOperatorMax()
          - OperatorMax()
      }
    }
  }
  

  namespace gr.ds.unipi.noda.api.redis {
    namespace aggregateOperator {
      class gr.ds.unipi.noda.api.redis.aggregateOperator.OperatorMin {
          {static} + newOperatorMin()
          - OperatorMin()
      }
    }
  }
  

  namespace gr.ds.unipi.noda.api.redis {
    namespace aggregateOperator {
      class gr.ds.unipi.noda.api.redis.aggregateOperator.OperatorSum {
          {static} + newOperatorSum()
          - OperatorSum()
      }
    }
  }
  

  namespace gr.ds.unipi.noda.api.redis {
    namespace aggregateOperator {
      class gr.ds.unipi.noda.api.redis.aggregateOperator.RedisAggregateOperatorFactory {
          + newOperatorAvg()
          + newOperatorCount()
          + newOperatorCountDistinct()
          + newOperatorCountNonNull()
          + newOperatorMax()
          + newOperatorMin()
          + newOperatorSum()
      }
    }
  }
  

  gr.ds.unipi.noda.api.redis.aggregateOperator.AggregateOperator -up-|> gr.ds.unipi.noda.api.core.operators.aggregateOperators.AggregateOperator
  gr.ds.unipi.noda.api.redis.aggregateOperator.OperatorAvg -up-|> gr.ds.unipi.noda.api.redis.aggregateOperator.AggregateOperator
  gr.ds.unipi.noda.api.redis.aggregateOperator.OperatorCount -up-|> gr.ds.unipi.noda.api.redis.aggregateOperator.AggregateOperator
  gr.ds.unipi.noda.api.redis.aggregateOperator.OperatorCountDistinct -up-|> gr.ds.unipi.noda.api.redis.aggregateOperator.AggregateOperator
  gr.ds.unipi.noda.api.redis.aggregateOperator.OperatorCountNonNull -up-|> gr.ds.unipi.noda.api.redis.aggregateOperator.AggregateOperator
  gr.ds.unipi.noda.api.redis.aggregateOperator.OperatorMax -up-|> gr.ds.unipi.noda.api.redis.aggregateOperator.AggregateOperator
  gr.ds.unipi.noda.api.redis.aggregateOperator.OperatorMin -up-|> gr.ds.unipi.noda.api.redis.aggregateOperator.AggregateOperator
  gr.ds.unipi.noda.api.redis.aggregateOperator.OperatorSum -up-|> gr.ds.unipi.noda.api.redis.aggregateOperator.AggregateOperator
  gr.ds.unipi.noda.api.redis.aggregateOperator.RedisAggregateOperatorFactory -up-|> gr.ds.unipi.noda.api.core.operators.aggregateOperators.BaseAggregateOperatorFactory


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
